force-app/main/default/objects/Employee_Process__c/Employee_Process__c.object-meta.xml
<CustomObject>
    <label>Employee Process</label>
    <nameField>
        <displayFormat>EP-{00000}</displayFormat>
        <label>Employee Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>