force-app/main/default/objects/Employee_Process__c/fields/Allowance__c.field-meta.xml
<CustomField>
    <fullName>Allowance__c</fullName>
    <label>% Allowance</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>