force-app/main/default/objects/Employee_Process__c/fields/ApprenticeshipAllowanceAmount__c.field-meta.xml
<CustomField>
    <fullName>ApprenticeshipAllowanceAmount__c</fullName>
    <formula>Allowance__c  *  Employeename__r.Salarypolicy__r.Basicsalary__c +  SpecificApprenticeshipAllowanceAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apprenticeship Allowance Amount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>