force-app/main/default/objects/Employee_Process__c/fields/ApprenticeshipStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprenticeshipStatus__c</fullName>
    <defaultValue>&apos;Created&apos;</defaultValue>
    <label>Apprenticeship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Direct Manager Approved</fullName>
            </value>
            <value>
                <fullName>BOD Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>