force-app/main/default/objects/Employee_Process__c/fields/CurrentPayslip__c.field-meta.xml
<CustomField>
    <fullName>CurrentPayslip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Payslip</label>
    <referenceTo>Payslip__c</referenceTo>
    <relationshipLabel>Employee Processes</relationshipLabel>
    <relationshipName>Employee_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>