force-app/main/default/objects/Employee_Process__c/fields/Employee_Process__c.field-meta.xml
<CustomField>
    <fullName>Employee_Process__c</fullName>
    <label>Intergration Assessment Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>