force-app/main/default/objects/Employee_Process__c/fields/Employeename__c.field-meta.xml
<CustomField>
    <fullName>Employeename__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Processes</relationshipLabel>
    <relationshipName>Employee_Processes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>