force-app/main/default/objects/Employee_Process__c/fields/End_date_Year__c.field-meta.xml
<CustomField>
    <fullName>End_date_Year__c</fullName>
    <formula>Year (End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End date Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>