force-app/main/default/objects/Employee_Process__c/fields/FulltimeStatus__c.field-meta.xml
<CustomField>
    <fullName>FulltimeStatus__c</fullName>
    <defaultValue>&apos;In Progress&apos;</defaultValue>
    <label>Full-time Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>