force-app/main/default/objects/Employee_Process__c/fields/MainProcess__c.field-meta.xml
<CustomField>
    <fullName>MainProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Process</label>
    <referenceTo>Employee_Process__c</referenceTo>
    <relationshipLabel>Employee Processes</relationshipLabel>
    <relationshipName>Employee_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>