force-app/main/default/objects/Employee_Process__c/fields/NetIncome__c.field-meta.xml
<CustomField>
    <fullName>NetIncome__c</fullName>
    <formula>CurrentPayslip__r.NetIncome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Income</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>