force-app/main/default/objects/Employee_Process__c/fields/Personal_Ass__c.field-meta.xml
<CustomField>
    <fullName>Personal_Ass__c</fullName>
    <label>Prossional Assessment Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>