force-app/main/default/objects/Employee_Process__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Employee Processes</relationshipLabel>
    <relationshipName>Employee_Processes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>