force-app/main/default/objects/Employee_Process__c/fields/ReasonofApprenticeship__c.field-meta.xml
<CustomField>
    <fullName>ReasonofApprenticeship__c</fullName>
    <label>Reason of Apprenticeship</label>
    <type>TextArea</type>
</CustomField>