force-app/main/default/objects/Employee_Process__c/fields/ReportTo__c.field-meta.xml
<CustomField>
    <fullName>ReportTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>