force-app/main/default/objects/Employee_Process__c/fields/ReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>ReviewStatus__c</fullName>
    <defaultValue>&apos;Created&apos;</defaultValue>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Manager Approved</fullName>
            </value>
            <value>
                <fullName>HR Manager Approved</fullName>
            </value>
            <value>
                <fullName>BOD Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>