force-app/main/default/objects/Employee_Process__c/fields/Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment__c</fullName>
    <label>Self-Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>