force-app/main/default/objects/Employee_Process__c/fields/SpecificApprenticeshipAllowanceAmount__c.field-meta.xml
<CustomField>
    <fullName>SpecificApprenticeshipAllowanceAmount__c</fullName>
    <label>Specific Apprenticeship Allowance Amount</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>