force-app/main/default/objects/Employee_Process__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>