force-app/main/default/objects/Employee_Process__c/fields/Start_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Month__c</fullName>
    <formula>Month( Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>