force-app/main/default/objects/Employee_Process__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Created&apos;</defaultValue>
    <label>Probation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Manager Approved</fullName>
            </value>
            <value>
                <fullName>HR Manager Approved</fullName>
            </value>
            <value>
                <fullName>BOD Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Integration Assessment</fullName>
                <isActive>false</isActive>
                <label>Integration Assessment</label>
            </value>
            <value>
                <fullName>Period 1</fullName>
                <isActive>false</isActive>
                <label>Period 1</label>
            </value>
            <value>
                <fullName>Period 2</fullName>
                <isActive>false</isActive>
                <label>Period 2</label>
            </value>
            <value>
                <fullName>Professional Assessment</fullName>
                <isActive>false</isActive>
                <label>Professional Assessment</label>
            </value>
            <value>
                <fullName>Seft-Assessment</fullName>
                <isActive>false</isActive>
                <label>Seft-Assessment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>