force-app/main/default/objects/Employee_Process__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProcessTemplate__c.TypeofProcess__c</field>
            <operation>equals</operation>
            <value>Check List</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProcessTemplate__c</referenceTo>
    <relationshipLabel>Employee Processes</relationshipLabel>
    <relationshipName>Employee_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>