force-app/main/default/objects/Employee_Process__c/recordTypes/Apprenticeship.recordType-meta.xml
<RecordType>
    <fullName>Apprenticeship</fullName>
    <active>true</active>
    <label>Apprenticeship</label>
</RecordType>