force-app/main/default/objects/Employee_Process__c/recordTypes/Fulltime.recordType-meta.xml
<RecordType>
    <fullName>Fulltime</fullName>
    <active>true</active>
    <label>Fulltime</label>
</RecordType>