force-app/main/default/objects/Employee_Process__c/recordTypes/Intern_Process.recordType-meta.xml
<RecordType>
    <fullName>Intern_Process</fullName>
    <active>true</active>
    <label>Intern Process</label>
</RecordType>