force-app/main/default/objects/Employee_Process__c/recordTypes/ProbationProcess.recordType-meta.xml
<RecordType>
    <fullName>ProbationProcess</fullName>
    <active>true</active>
    <label>Probation Process</label>
</RecordType>