force-app/main/default/objects/Employee_Process__c/recordTypes/Promotion_Process.recordType-meta.xml
<RecordType>
    <fullName>Promotion_Process</fullName>
    <active>true</active>
    <label>Promotion Process</label>
</RecordType>