force-app/main/default/objects/Employee_Process__c/recordTypes/RenewProcess.recordType-meta.xml
<RecordType>
    <fullName>RenewProcess</fullName>
    <active>true</active>
    <label>Renew Process</label>
</RecordType>