force-app/main/default/objects/Employee_Process__c/recordTypes/Review_Process.recordType-meta.xml
<RecordType>
    <fullName>Review_Process</fullName>
    <active>true</active>
    <label>Review Process</label>
</RecordType>