force-app/main/default/objects/Employee_Process__c/recordTypes/Rotation_Process.recordType-meta.xml
<RecordType>
    <fullName>Rotation_Process</fullName>
    <active>true</active>
    <label>Rotation Process</label>
</RecordType>