force-app/main/default/objects/Employee_Process__c/validationRules/Allowance.validationRule-meta.xml
<ValidationRule>
    <fullName>Allowance</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Not(isnull(  SpecificApprenticeshipAllowanceAmount__c  )),
not(isnull (Allowance__c )))</errorConditionFormula>
    <errorMessage>Please input only input ONLY one: %Allowance or Specific Apprenticeship Allowance Amount!</errorMessage>
</ValidationRule>