force-app/main/default/objects/Employee_Process__c/validationRules/End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End Date cannot be before Start Date.</errorMessage>
</ValidationRule>