force-app/main/default/objects/Employee_Process__c/validationRules/Report_to.validationRule-meta.xml
<ValidationRule>
    <fullName>Report_to</fullName>
    <active>true</active>
    <errorConditionFormula>Employeename__c =  ReportTo__c</errorConditionFormula>
    <errorMessage>You cannot report to yourself!</errorMessage>
</ValidationRule>